--- a/yuchdroid16/res/values-zh/arrays.xml
+++ b/yuchdroid16/res/values-zh/arrays.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="login_pref_pulse">
-    	<item>1 Minutes</item>
-    	<item>3 Minutes</item>
-    	<item>5 Minutes</item>
-    	<item>10 Minutes</item>
-    	<item>30 Minutes</item>
+    	<item>1分钟</item>
+    	<item>3分钟</item>
+    	<item>5分钟</item>
+    	<item>10分钟</item>
+    	<item>30分钟</item>
     </string-array>
     <string-array name="login_pref_pulse_values">
     	<item>1</item>
