--- a/yuchdroid16/res/layout/home.xml
+++ b/yuchdroid16/res/layout/home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical"
 	android:layout_width="fill_parent"
@@ -7,5 +7,19 @@
 	android:background="#FFF"
 	android:id="@+id/home_activity">
 	
-	
-</RelativeLayout>
+	<ListView 
+		android:id="@id/android:list"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:divider="@drawable/mail_list_divider"
+		android:dividerHeight="1dp"
+		android:cacheColorHint="#00000000" />
+		
+	<TextView 
+		android:id="@id/android:empty"
+		android:layout_width="fill_parent" 
+		android:layout_height="fill_parent"
+		android:gravity="center"
+		android:text="@string/mail_home_empty_group"/>
+
+</LinearLayout>
