--- a/yuchdroid16/res/layout/mail_open_envelope_detail.xml
+++ b/yuchdroid16/res/layout/mail_open_envelope_detail.xml
@@ -5,6 +5,7 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
 	android:minWidth="300dp">
+	
 	<TextView 
     	android:id="@+id/mail_open_detail_subject"
     	android:layout_width="fill_parent"
@@ -45,8 +46,14 @@
    		android:textSize="18dp"
    		android:textStyle="bold"
    		android:text="@string/mail_open_detail_to"/>
-   	<LinearLayout
-   		android:id="@+id/mail_open_detail_to_list"
-    	android:layout_width="fill_parent"
-    	android:layout_height="wrap_content"></LinearLayout>   
+   	<ScrollView 
+   		android:layout_width="fill_parent"
+   		android:layout_height="wrap_content">
+   		<LinearLayout
+	   		android:id="@+id/mail_open_detail_to_list"
+	    	android:layout_width="fill_parent"
+	    	android:layout_height="wrap_content"
+	    	android:orientation="vertical"></LinearLayout>
+   	</ScrollView>
+   	       
 </LinearLayout>
