--- a/yuchdroid16/res/values-zh/arrays.xml
+++ b/yuchdroid16/res/values-zh/arrays.xml
@@ -19,4 +19,19 @@
     </string-array>
     <string-array name="mail_pref_default_account_values">
     </string-array>
+    
+    <string-array name="font_size">
+    	<item>小号</item>
+    	<item>中号</item>
+    	<item>正常</item>
+    	<item>大号</item>
+    	<item>特大号</item>
+    </string-array>
+    <string-array name="font_size_values">
+    	<item>14</item>
+    	<item>16</item>
+    	<item>18</item>
+    	<item>20</item>
+    	<item>22</item>
+    </string-array>
 </resources>
