--- a/yuchdroid16/res/layout/home.xml
+++ b/yuchdroid16/res/layout/home.xml
@@ -12,7 +12,7 @@
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:divider="@drawable/mail_list_divider"
-		android:dividerHeight="1dp"
+		android:dividerHeight="1sp"
 		android:cacheColorHint="#00000000" />
 		
 	<TextView 
