--- a/yuchdroid16/res/layout/main.xml
+++ b/yuchdroid16/res/layout/main.xml
@@ -81,7 +81,7 @@
 	<LinearLayout 
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="10dp"
+		android:layout_marginTop="5dp"
 		android:orientation="horizontal">
 		<Button android:text="@string/start_svr_but" 
       		android:id="@+id/login_start_svr" 
@@ -89,8 +89,8 @@
       		android:layout_width="wrap_content"
       		android:paddingLeft="20dp"
       		android:paddingRight="20dp"
-      		android:paddingTop="10dp"
-      		android:paddingBottom="10dp"
+      		android:paddingTop="5dp"
+      		android:paddingBottom="5dp"
       		android:gravity="center"
       		android:textColor="#fff"
       		android:textStyle="bold"
@@ -107,5 +107,13 @@
   			android:layout_gravity="center_vertical"
 		/> 
 	</LinearLayout>
+	<TextView
+   		android:text="@string/login_beta_prompt"
+   		android:layout_height="fill_parent" 
+   		android:layout_width="wrap_content"
+   		android:layout_marginTop="5dp"
+   		android:textSize="16sp"
+   		android:textColor="#888" 
+   	/>
       
 </LinearLayout>
