--- a/yuchdroid16/res/layout/mail_open_envelope_detail.xml
+++ b/yuchdroid16/res/layout/mail_open_envelope_detail.xml
@@ -40,20 +40,57 @@
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
     	android:src="@drawable/divider"/>
-   	<TextView 
-   		android:layout_width="wrap_content"
-   		android:layout_height="wrap_content"
-   		android:textSize="18dp"
-   		android:textStyle="bold"
-   		android:text="@string/mail_open_detail_to"/>
-   	<ScrollView 
+
+   	<ScrollView
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content">
    		<LinearLayout
 	   		android:id="@+id/mail_open_detail_to_list"
 	    	android:layout_width="fill_parent"
 	    	android:layout_height="wrap_content"
-	    	android:orientation="vertical"></LinearLayout>
+	    	android:orientation="vertical">
+	    	<TextView 
+		   		android:layout_width="wrap_content"
+		   		android:layout_height="wrap_content"
+		   		android:textSize="18dp"
+		   		android:textStyle="bold"
+		   		android:text="@string/mail_open_detail_to"/>
+	    </LinearLayout>
+	    
+   	</ScrollView>
+   	
+   	<ScrollView
+   		android:layout_width="fill_parent"
+   		android:layout_height="wrap_content">
+   		<LinearLayout
+	   		android:id="@+id/mail_open_detail_cc_list"
+	    	android:layout_width="fill_parent"
+	    	android:layout_height="wrap_content"
+	    	android:orientation="vertical">
+	    	<TextView 
+		   		android:layout_width="wrap_content"
+		   		android:layout_height="wrap_content"
+		   		android:textSize="18dp"
+		   		android:textStyle="bold"
+		   		android:text="@string/mail_open_detail_cc"/>
+	    </LinearLayout>
+   	</ScrollView>
+   	
+   	<ScrollView
+   		android:layout_width="fill_parent"
+   		android:layout_height="wrap_content">
+   		<LinearLayout
+	   		android:id="@+id/mail_open_detail_bcc_list"
+	    	android:layout_width="fill_parent"
+	    	android:layout_height="wrap_content"
+	    	android:orientation="vertical">
+	    	<TextView 
+		   		android:layout_width="wrap_content"
+		   		android:layout_height="wrap_content"
+		   		android:textSize="18dp"
+		   		android:textStyle="bold"
+		   		android:text="@string/mail_open_detail_bcc"/>
+	    </LinearLayout>
    	</ScrollView>
    	       
 </LinearLayout>
