--- a/yuchdroid16/res/layout/main.xml
+++ b/yuchdroid16/res/layout/main.xml
@@ -91,12 +91,14 @@
       		android:paddingRight="20dp"
       		android:paddingTop="5dp"
       		android:paddingBottom="5dp"
+      		android:layout_marginLeft="10sp"
       		android:gravity="center"
       		android:textColor="#fff"
       		android:textStyle="bold"
       		android:textSize="18dp"
       		android:background="@drawable/login_button"
 	    />
+		
 	  	<TextView android:text="TextView" 
   			android:id="@+id/login_connect_text"
   			android:textSize="20dp" 
@@ -107,13 +109,13 @@
   			android:layout_gravity="center_vertical"
 		/> 
 	</LinearLayout>
+	
 	<TextView
    		android:text="@string/login_beta_prompt"
-   		android:layout_height="fill_parent" 
+   		android:layout_height="wrap_content" 
    		android:layout_width="wrap_content"
    		android:layout_marginTop="5dp"
    		android:textSize="16sp"
-   		android:textColor="#888" 
-   	/>
+   		android:textColor="#888"/>
       
 </LinearLayout>
