--- a/yuchdroid16/res/layout/yuch_logon_title.xml
+++ b/yuchdroid16/res/layout/yuch_logon_title.xml
@@ -4,16 +4,26 @@
 	android:orientation="vertical"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
-
-	<TextView android:layout_width="fill_parent"
-		android:layout_height="fill_parent"
-		android:text="@string/yuch_logon_sign_title"/>
 		
 	<ProgressBar 
     	android:id="@+id/logon_title_progress"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentTop="true"
     	style="?android:attr/progressBarStyleHorizontal" 
     	android:max="100"/>
+	
+	<TextView android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentTop="true"
+		android:text="@string/yuch_logon_sign_title"
+		android:singleLine="true"
+		android:textColor="#FFF"
+		android:shadowColor="#000"
+		android:shadowDx="1"
+		android:shadowDy="1"
+		android:shadowRadius="1"/>
 		  
 </RelativeLayout>
