--- a/yuchdroid16/res/menu/login_menu.xml
+++ b/yuchdroid16/res/menu/login_menu.xml
@@ -9,4 +9,7 @@
     <item android:id="@+id/login_menu_about"
           android:icon="@drawable/login_menu_ic_about"
           android:title="@string/login_menu_about" />
+    <item android:id="@+id/login_menu_account"
+          android:icon="@drawable/login_menu_ic_account"
+          android:title="@string/login_menu_account" />
 </menu>
