--- a/yuchdroid16/res/layout/main.xml
+++ b/yuchdroid16/res/layout/main.xml
@@ -5,117 +5,125 @@
     android:weightSum="1" 
     android:orientation="vertical"
     android:background="#eee">
-    
-    <ImageView
-    	android:layout_height="wrap_content"
-    	android:layout_width="wrap_content"
-    	android:layout_gravity="center_horizontal"
-    	android:layout_centerHorizontal="true"
-    	android:src="@drawable/big_logo"
-    />
-    <LinearLayout 
-    	android:layout_height="wrap_content" 
-    	android:layout_width="fill_parent"
-    	android:orientation="horizontal">
-    	<TextView
-    		android:text="@string/login_host"
-    		android:layout_height="fill_parent" 
-    		android:layout_width="70dp"
-    		android:gravity="center|right"
-    		android:textColor="#000"
-    	/>
-    	<EditText
-    		android:id="@+id/login_host"
-    		android:layout_height="fill_parent" 
-    		android:layout_width="250dp"
-    		android:singleLine="true"
-    		android:background="@drawable/login_edit"
-    		android:hint="@string/login_host_hint"
-    	/>
-    </LinearLayout>
-    <LinearLayout 
-    	android:layout_height="wrap_content" 
-    	android:layout_width="fill_parent"
-    	android:orientation="horizontal">
-    	<TextView
-    		android:text="@string/login_port"
-    		android:layout_height="fill_parent" 
-    		android:layout_width="70dp"
-    		android:gravity="center|right"
-    		android:textColor="#000" 
-    	/>
-    	<EditText
-    		android:id="@+id/login_port"
-    		android:layout_height="fill_parent" 
-    		android:layout_width="250dp"
-    		android:numeric="integer"
-    		android:maxLength="5"
-    		android:singleLine="true"
-    		android:background="@drawable/login_edit"
-    		android:hint="@string/login_port_hint"
-    	/>
-    </LinearLayout>
-    <LinearLayout 
-    	android:layout_height="wrap_content" 
-    	android:layout_width="fill_parent"
-    	android:orientation="horizontal">
-    	<TextView
-    		android:text="@string/login_user_pass"
-    		android:layout_height="fill_parent" 
-    		android:layout_width="70dp"
-    		android:gravity="center|right"
-    		android:textColor="#000" 
-    	/>
-    	<EditText
-    		android:id="@+id/login_user_pass"
-    		android:layout_height="fill_parent" 
-    		android:layout_width="250dp"
-    		android:maxLength="120"
-    		android:singleLine="true"
-    		android:password="true"
-    		android:background="@drawable/login_edit"
-    		android:hint="@string/login_user_pass_hint"
-    	/>
-    </LinearLayout>
-
-	<LinearLayout 
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="5dp"
-		android:orientation="horizontal">
-		<Button android:text="@string/start_svr_but" 
-      		android:id="@+id/login_start_svr" 
-      		android:layout_height="wrap_content" 
-      		android:layout_width="wrap_content"
-      		android:paddingLeft="20dp"
-      		android:paddingRight="20dp"
-      		android:paddingTop="5dp"
-      		android:paddingBottom="5dp"
-      		android:layout_marginLeft="10sp"
-      		android:gravity="center"
-      		android:textColor="#fff"
-      		android:textStyle="bold"
-      		android:textSize="18dp"
-      		android:background="@drawable/login_button"
-	    />
+    <ScrollView 
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content">
+        <LinearLayout 
+	    	android:layout_height="wrap_content" 
+	    	android:layout_width="fill_parent"
+	    	android:orientation="vertical">
+	    	<ImageView
+		    	android:layout_height="wrap_content"
+		    	android:layout_width="wrap_content"
+		    	android:layout_gravity="center_horizontal"
+		    	android:layout_centerHorizontal="true"
+		    	android:src="@drawable/big_logo"
+		    />
+		    <LinearLayout 
+		    	android:layout_height="wrap_content" 
+		    	android:layout_width="fill_parent"
+		    	android:orientation="horizontal">
+		    	<TextView
+		    		android:text="@string/login_host"
+		    		android:layout_height="fill_parent" 
+		    		android:layout_width="70dp"
+		    		android:gravity="center|right"
+		    		android:textColor="#000"
+		    	/>
+		    	<EditText
+		    		android:id="@+id/login_host"
+		    		android:layout_height="fill_parent" 
+		    		android:layout_width="250dp"
+		    		android:singleLine="true"
+		    		android:background="@drawable/login_edit"
+		    		android:hint="@string/login_host_hint"
+		    	/>
+		    </LinearLayout>
+		    <LinearLayout 
+		    	android:layout_height="wrap_content" 
+		    	android:layout_width="fill_parent"
+		    	android:orientation="horizontal">
+		    	<TextView
+		    		android:text="@string/login_port"
+		    		android:layout_height="fill_parent" 
+		    		android:layout_width="70dp"
+		    		android:gravity="center|right"
+		    		android:textColor="#000" 
+		    	/>
+		    	<EditText
+		    		android:id="@+id/login_port"
+		    		android:layout_height="fill_parent" 
+		    		android:layout_width="250dp"
+		    		android:numeric="integer"
+		    		android:maxLength="5"
+		    		android:singleLine="true"
+		    		android:background="@drawable/login_edit"
+		    		android:hint="@string/login_port_hint"
+		    	/>
+		    </LinearLayout>
+		    <LinearLayout 
+		    	android:layout_height="wrap_content" 
+		    	android:layout_width="fill_parent"
+		    	android:orientation="horizontal">
+		    	<TextView
+		    		android:text="@string/login_user_pass"
+		    		android:layout_height="fill_parent" 
+		    		android:layout_width="70dp"
+		    		android:gravity="center|right"
+		    		android:textColor="#000" 
+		    	/>
+		    	<EditText
+		    		android:id="@+id/login_user_pass"
+		    		android:layout_height="fill_parent" 
+		    		android:layout_width="250dp"
+		    		android:maxLength="120"
+		    		android:singleLine="true"
+		    		android:password="true"
+		    		android:background="@drawable/login_edit"
+		    		android:hint="@string/login_user_pass_hint"
+		    	/>
+		    </LinearLayout>
 		
-	  	<TextView android:text="TextView" 
-  			android:id="@+id/login_connect_text"
-  			android:textSize="20dp" 
-  			android:layout_width="fill_parent" 
-  			android:layout_height="wrap_content"
-  			android:layout_marginLeft="10dp"
-  			android:textColor="#000" 
-  			android:layout_gravity="center_vertical"
-		/> 
-	</LinearLayout>
-	
-	<TextView
-   		android:text="@string/login_beta_prompt"
-   		android:layout_height="wrap_content" 
-   		android:layout_width="wrap_content"
-   		android:layout_marginTop="5dp"
-   		android:textSize="16sp"
-   		android:textColor="#888"/>
-      
+			<LinearLayout 
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginTop="5dp"
+				android:orientation="horizontal">
+				<Button android:text="@string/start_svr_but" 
+		      		android:id="@+id/login_start_svr" 
+		      		android:layout_height="wrap_content" 
+		      		android:layout_width="wrap_content"
+		      		android:paddingLeft="20dp"
+		      		android:paddingRight="20dp"
+		      		android:paddingTop="5dp"
+		      		android:paddingBottom="5dp"
+		      		android:layout_marginLeft="10sp"
+		      		android:gravity="center"
+		      		android:textColor="#fff"
+		      		android:textStyle="bold"
+		      		android:textSize="18dp"
+		      		android:background="@drawable/login_button"
+			    />
+				
+			  	<TextView android:text="TextView" 
+		  			android:id="@+id/login_connect_text"
+		  			android:textSize="20dp" 
+		  			android:layout_width="fill_parent" 
+		  			android:layout_height="wrap_content"
+		  			android:layout_marginLeft="10dp"
+		  			android:textColor="#000" 
+		  			android:layout_gravity="center_vertical"
+				/> 
+			</LinearLayout>
+			
+			<TextView
+		   		android:text="@string/login_beta_prompt"
+		   		android:layout_height="wrap_content" 
+		   		android:layout_width="wrap_content"
+		   		android:layout_marginTop="5dp"
+		   		android:textSize="16sp"
+		   		android:textColor="#888"/>
+			
+    	</LinearLayout>
+    </ScrollView>
 </LinearLayout>
