--- a/yuchdroid16/res/layout/mail_open_envelope.xml
+++ b/yuchdroid16/res/layout/mail_open_envelope.xml
@@ -35,48 +35,44 @@
 		/>
 		<TextView
 			android:id="@+id/mail_open_date"
-			android:layout_alignParentRight="true"
-			android:layout_width="fill_parent"
+			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_toRightOf="@id/mail_open_from_addr"
+			android:layout_below="@id/mail_open_from_addr"
 			android:textColor="#000"
 			android:textSize="14dp"
 			android:layout_marginTop="3dp"
 			android:layout_marginRight="5dp"
-			android:gravity="right"
+			android:gravity="left"
 			android:text="Mail Date"
 		/>
+		<TextView 
+			android:id="@+id/mail_open_time"
+			android:layout_below="@id/mail_open_from_addr"
+			android:layout_toRightOf="@id/mail_open_date"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:paddingRight="5dp"
+			android:textColor="#000"
+			android:textSize="14dp"
+			android:layout_marginTop="3dp"
+			android:gravity="right"
+			android:text="Mail Time"
+		/>
 		
-		<LinearLayout 
-		    android:id="@+id/mail_open_addr_and_date"
-		    android:layout_below="@id/mail_open_from_addr"
-		    android:layout_width="fill_parent"
-		    android:layout_height="wrap_content"
-		    android:orientation="horizontal">
-		    <TextView
-				android:id="@+id/mail_open_recv_addr"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:textColor="#000"
-				android:textSize="14dp"
-				android:text="Mail Recv Addr"
-			/>
-			<TextView 
-				android:id="@+id/mail_open_time"
-				android:layout_below="@id/mail_open_date"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:paddingRight="5dp"
-				android:textColor="#000"
-				android:textSize="14dp"
-				android:gravity="right"
-				android:text="Mail Time"
-			/>
-		</LinearLayout>
+
+	    <TextView
+			android:id="@+id/mail_open_recv_addr"
+			android:layout_below="@id/mail_open_date"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textColor="#000"
+			android:textSize="14dp"
+			android:text="Mail Recv Addr"
+		/>			
 		
 		<TextView
 			android:id="@+id/mail_open_subject"
-			android:layout_below="@id/mail_open_addr_and_date"
+			android:layout_below="@id/mail_open_recv_addr"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textColor="#000"
