--- a/yuchdroid16/res/values-zh/arrays.xml
+++ b/yuchdroid16/res/values-zh/arrays.xml
@@ -20,18 +20,39 @@
     <string-array name="mail_pref_default_account_values">
     </string-array>
     
-    <string-array name="font_size">
+    <string-array name="mail_font_size">
     	<item>小号</item>
     	<item>中号</item>
     	<item>正常</item>
     	<item>大号</item>
     	<item>特大号</item>
     </string-array>
-    <string-array name="font_size_values">
+    <string-array name="mail_font_size_values">
     	<item>14</item>
     	<item>16</item>
     	<item>18</item>
     	<item>20</item>
     	<item>22</item>
+    </string-array>
+    
+    <string-array name="mail_clear_before_day">
+    	<item>15天</item>
+    	<item>1个月</item>
+    	<item>2个月</item>
+    	<item>3个月</item>
+    	<item>4个月</item>
+    	<item>5个月</item>
+    	<item>6个月</item>
+    	<item>永远</item>
+    </string-array>
+    <string-array name="mail_clear_before_day_values">
+    	<item>15</item>
+    	<item>30</item>
+    	<item>60</item>
+    	<item>90</item>
+    	<item>120</item>
+    	<item>150</item>
+    	<item>180</item>
+    	<item>-1</item>
     </string-array>
 </resources>
