--- a/yuchdroid16/res/values/arrays.xml
+++ b/yuchdroid16/res/values/arrays.xml
@@ -20,18 +20,39 @@
     <string-array name="mail_pref_default_account_values">
     </string-array>
     
-    <string-array name="font_size">
+    <string-array name="mail_font_size">
     	<item>Small</item>
     	<item>Middle</item>
     	<item>Normal</item>
     	<item>Big</item>
     	<item>Great</item>
     </string-array>
-    <string-array name="font_size_values">
+    <string-array name="mail_font_size_values">
     	<item>14</item>
     	<item>16</item>
     	<item>18</item>
     	<item>20</item>
     	<item>22</item>
+    </string-array>
+    
+    <string-array name="mail_clear_before_day">
+    	<item>15 Days</item>
+    	<item>1 Month</item>
+    	<item>2 Months</item>
+    	<item>3 Months</item>
+    	<item>4 Months</item>
+    	<item>5 Months</item>
+    	<item>6 Months</item>
+    	<item>Forever</item>
+    </string-array>
+    <string-array name="mail_clear_before_day_values">
+    	<item>15</item>
+    	<item>30</item>
+    	<item>60</item>
+    	<item>90</item>
+    	<item>120</item>
+    	<item>150</item>
+    	<item>180</item>
+    	<item>-1</item>
     </string-array>
 </resources>
